добавлен планировщик